added some files

--- a/index.html
+++ b/index.html
@@ -7,12 +7,51 @@
 </head>
 	
 <body>
-		<button id="modalBtn1" class="button1">stuff i've made</button>
-		<button id="modalBtn2" class="button2">about me</button>
-		<button id="modalBtn3" class="button3">blog</button>
+		<button id="modalBtn1" class="button1">blog</button>
+		<button id="modalBtn2" class="button2">portfolio</button>
+		<button id="modalBtn3" class="button3">about</button>
 		<button id="modalBtn4" class="button4">contact</button>
 
+
+		<!-- Blog Modal -->
+
 		<div id = "modal1" class="modal1" tabindex="-1" role="dialog">
+			<div class="modal-content1">
+				<div class="modal-header">
+					<span class="closeBtn">&times;</span>
+				</div>
+				<div class="modal-body">
+				</div>
+			</div>
+		</div>
+
+		<!-- Portfolio Modal -->
+
+		<div id = "modal1" class="modal2" tabindex="-1" role="dialog">
+			<div class="modal-content1">
+				<div class="modal-header">
+					<span class="closeBtn">&times;</span>
+				</div>
+				<div class="modal-body">
+				</div>
+			</div>
+		</div>
+
+		<!-- About Modal -->
+
+		<div id = "modal1" class="modal3" tabindex="-1" role="dialog">
+			<div class="modal-content1">
+				<div class="modal-header">
+					<span class="closeBtn">&times;</span>
+				</div>
+				<div class="modal-body">
+				</div>
+			</div>
+		</div>
+
+		<!-- ContactModal -->
+
+		<div id = "modal1" class="modal4" tabindex="-1" role="dialog">
 			<div class="modal-content1">
 				<div class="modal-header">
 					<span class="closeBtn">&times;</span>
