--- a/index.html
+++ b/index.html
@@ -17,49 +17,54 @@
 
 		<div id = "modal1" class="modal1" tabindex="-1" role="dialog">
 			<div class="modal-content1">
-				<div class="modal-header">
-					<span class="closeBtn">&times;</span>
+				<div class="modal-header1">
+					<i>This is a test</i>
+					<span class="closeBtn1">&times;</span>
 				</div>
-				<div class="modal-body">
+				<div class="modal-body1">
+					<i>this is where some text goes..</i>
+
 				</div>
 			</div>
 		</div>
 
 		<!-- Portfolio Modal -->
 
-		<div id = "modal1" class="modal2" tabindex="-1" role="dialog">
-			<div class="modal-content1">
-				<div class="modal-header">
-					<span class="closeBtn">&times;</span>
+		<div id = "modal2" class="modal2" tabindex="-1" role="dialog">
+			<div class="modal-content2">
+				<div class="modal-header2">
+					<span class="closeBtn2">&times;</span>
 				</div>
-				<div class="modal-body">
+				<div class="modal-body2">
 				</div>
 			</div>
 		</div>
 
 		<!-- About Modal -->
 
-		<div id = "modal1" class="modal3" tabindex="-1" role="dialog">
-			<div class="modal-content1">
-				<div class="modal-header">
-					<span class="closeBtn">&times;</span>
+		<div id = "modal3" class="modal3" tabindex="-1" role="dialog">
+			<div class="modal-conten31">
+				<div class="modal-header3">
+					<span class="closeBtn3">&times;</span>
 				</div>
-				<div class="modal-body">
+				<div class="modal-body3">
 				</div>
 			</div>
 		</div>
 
 		<!-- ContactModal -->
 
-		<div id = "modal1" class="modal4" tabindex="-1" role="dialog">
-			<div class="modal-content1">
-				<div class="modal-header">
-					<span class="closeBtn">&times;</span>
+		<div id = "modal4" class="modal4" tabindex="-1" role="dialog">
+			<div class="modal-content4">
+				<div class="modal-header4">
+					<span class="closeBtn4">&times;</span>
 				</div>
-				<div class="modal-body">
+				<div class="modal-body4">
 				</div>
 			</div>
 		</div>
+
+		<script src="public/javascript/modal.js"></script>
 
 </body>
 
