fixed modal problem

--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
 
 </head>
 	
+
 <body>
 		<button id="modalBtn1" class="button1">blog</button>
 		<button id="modalBtn2" class="button2">portfolio</button>
 		<button id="modalBtn3" class="button3">about</button>
 		<button id="modalBtn4" class="button4">contact</button>
 
-
 		<!-- Blog Modal -->
 
 		<div id = "modal1" class="modal1" tabindex="-1" role="dialog">
 			<div class="modal-content1">
 				<div class="modal-header1">
-					<i>This is a test</i>
+					<h2>Blog Modal</h2>
 					<span class="closeBtn1">&times;</span>
 				</div>
 				<div class="modal-body1">
-					<i>this is where some text goes..</i>
+					<p>this is where some blog stuff goes..</p>
 
 				</div>
 			</div>
@@ -33,9 +33,11 @@
 		<div id = "modal2" class="modal2" tabindex="-1" role="dialog">
 			<div class="modal-content2">
 				<div class="modal-header2">
+					<h2>Potfolio Modal</h2>
 					<span class="closeBtn2">&times;</span>
 				</div>
 				<div class="modal-body2">
+					<p>this is where some portfolio stuff goes..</p>
 				</div>
 			</div>
 		</div>
@@ -43,11 +45,16 @@
 		<!-- About Modal -->
 
 		<div id = "modal3" class="modal3" tabindex="-1" role="dialog">
-			<div class="modal-conten31">
+			<div class="modal-content3">
 				<div class="modal-header3">
+					<h2>About Modal</h2>
 					<span class="closeBtn3">&times;</span>
+
 				</div>
 				<div class="modal-body3">
+					<p>
+						This is where about me goes...
+					</p>
 				</div>
 			</div>
 		</div>
@@ -57,12 +64,15 @@
 		<div id = "modal4" class="modal4" tabindex="-1" role="dialog">
 			<div class="modal-content4">
 				<div class="modal-header4">
+					<h2>Contact Modal</h2>
 					<span class="closeBtn4">&times;</span>
 				</div>
 				<div class="modal-body4">
+					<p>This is where my contact info goes..</p>
 				</div>
 			</div>
 		</div>
+
 
 		<script src="public/javascript/modal.js"></script>
 
