changed modal slide in

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" type="text/css" href="public/scss/style.css">
 
 </head>
-	
+
 
 <body>
 		<button id="modalBtn1" class="button1">blog</button>
@@ -47,14 +47,21 @@
 		<div id = "modal3" class="modal3" tabindex="-1" role="dialog">
 			<div class="modal-content3">
 				<div class="modal-header3">
-					<h2>About Modal</h2>
 					<span class="closeBtn3">&times;</span>
 
 				</div>
 				<div class="modal-body3">
-					<p>
-						This is where about me goes...
-					</p>
+					<div id="originText">
+						Hello There, <br>
+						<br>
+						I was one of those typical kids who had no idea of what they wanted to do. The "dream" career pretty much rotated on a weekly basis until college. From an early age on, however, I was always pretty imaginative. I enjoyed creating worlds and stories. I'm sure my neighbors were fairly concerned when I ran around the backyard, tossing a football to myself, imagining an entire Hall of Fame career in the course of a half-hour. I have plenty of memories of epic lightsaber battles around the school, or begging my mom to buy me a new pack of Yu-Gi-Oh cards (remember when McDonald's used to give them as Happy Meal Toys? The past was truly better).<br>
+						<br>
+			 			I probably spent way too much time in fantasy-land as a kid, because, in some ways, I feel like I never left. I still love to create worlds and explore the infinite bounty of ridiculousness that exists in my brain. I did, however, realize that while an eight year old kid running around the backyard talking to himself may be innocent and maybe even charming, the same can not be said for a twenty-something year old adult. In order to trick society to allow me to continue my whackiness, I decided to go into Computer Science. While working towards my degree, I discovered that a lot of the fun fantasies that I had envisioned as a kid, I could now re-create using video games as a medium <br>
+			 			<br>
+			 			So what kind of employee would you be getting in hiring me? Well, I can't tell you exactly, but I can promise that you'll be getting someone who is passionate about creating new and exciting worlds and adventures. I constantly strive to improve myself and my abilities, so that I can truly be an asset to the people I work with.<br>
+						<br>
+			            -Evan Zoran<br>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -64,11 +71,16 @@
 		<div id = "modal4" class="modal4" tabindex="-1" role="dialog">
 			<div class="modal-content4">
 				<div class="modal-header4">
-					<h2>Contact Modal</h2>
 					<span class="closeBtn4">&times;</span>
 				</div>
 				<div class="modal-body4">
-					<p>This is where my contact info goes..</p>
+					<div id = "bodyLinks">
+						<ul>
+							<li><a>For Professional Inquiries:</a></li>
+				 			<li><a href="mailto:evanzoran17@gmail.com?Subject=Inquiry">evanzoran17@gmail.com</a></li>
+				 			<li><a title="Test" >(303)-725-0664</a></li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
