--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
 
 
 <body>
-		<button id="modalBtn1" class="button1">blog</button>
-		<button id="modalBtn2" class="button2">portfolio</button>
-		<button id="modalBtn3" class="button3">about</button>
-		<button id="modalBtn4" class="button4">contact</button>
+
+		<div class="title"><p>my name is evan.<br>i make stuff.</p></div>
+
+		<div class="buttons">
+			<button id="modalBtn1" class="button1">blog</button>
+			<button id="modalBtn2" class="button2">portfolio</button>
+			<button id="modalBtn3" class="button3">about</button>
+			<button id="modalBtn4" class="button4">contact</button>
+		</div>
 
 		<!-- Blog Modal -->
 
@@ -22,8 +27,32 @@
 					<span class="closeBtn1">&times;</span>
 				</div>
 				<div class="modal-body1">
+					<!-- Lookat -->
 					<p>this is where some blog stuff goes..</p>
 
+					<div id="originText">
+						Hello There, <br>
+						<br>
+						I was one of those typical kids who had no idea of what they wanted to do. The "dream" career pretty much rotated on a weekly basis until college. From an early age on, however, I was always pretty imaginative. I enjoyed creating worlds and stories. I'm sure my neighbors were fairly concerned when I ran around the backyard, tossing a football to myself, imagining an entire Hall of Fame career in the course of a half-hour. I have plenty of memories of epic lightsaber battles around the school, or begging my mom to buy me a new pack of Yu-Gi-Oh cards (remember when McDonald's used to give them as Happy Meal Toys? The past was truly better).<br>
+						<br>
+			 			I probably spent way too much time in fantasy-land as a kid, because, in some ways, I feel like I never left. I still love to create worlds and explore the infinite bounty of ridiculousness that exists in my brain. I did, however, realize that while an eight year old kid running around the backyard talking to himself may be innocent and maybe even charming, the same can not be said for a twenty-something year old adult. In order to trick society to allow me to continue my whackiness, I decided to go into Computer Science. While working towards my degree, I discovered that a lot of the fun fantasies that I had envisioned as a kid, I could now re-create using video games as a medium <br>
+			 			<br>
+			 			So what kind of employee would you be getting in hiring me? Well, I can't tell you exactly, but I can promise that you'll be getting someone who is passionate about creating new and exciting worlds and adventures. I constantly strive to improve myself and my abilities, so that I can truly be an asset to the people I work with.<br>
+						<br>
+			            -Evan Zoran<br>
+					</div>
+
+					<div id="originText">
+						Hello There, <br>
+						<br>
+						I was one of those typical kids who had no idea of what they wanted to do. The "dream" career pretty much rotated on a weekly basis until college. From an early age on, however, I was always pretty imaginative. I enjoyed creating worlds and stories. I'm sure my neighbors were fairly concerned when I ran around the backyard, tossing a football to myself, imagining an entire Hall of Fame career in the course of a half-hour. I have plenty of memories of epic lightsaber battles around the school, or begging my mom to buy me a new pack of Yu-Gi-Oh cards (remember when McDonald's used to give them as Happy Meal Toys? The past was truly better).<br>
+						<br>
+			 			I probably spent way too much time in fantasy-land as a kid, because, in some ways, I feel like I never left. I still love to create worlds and explore the infinite bounty of ridiculousness that exists in my brain. I did, however, realize that while an eight year old kid running around the backyard talking to himself may be innocent and maybe even charming, the same can not be said for a twenty-something year old adult. In order to trick society to allow me to continue my whackiness, I decided to go into Computer Science. While working towards my degree, I discovered that a lot of the fun fantasies that I had envisioned as a kid, I could now re-create using video games as a medium <br>
+			 			<br>
+			 			So what kind of employee would you be getting in hiring me? Well, I can't tell you exactly, but I can promise that you'll be getting someone who is passionate about creating new and exciting worlds and adventures. I constantly strive to improve myself and my abilities, so that I can truly be an asset to the people I work with.<br>
+						<br>
+			            -Evan Zoran<br>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -52,6 +81,7 @@
 				</div>
 				<div class="modal-body3">
 					<div id="originText">
+
 						Hello There, <br>
 						<br>
 						I was one of those typical kids who had no idea of what they wanted to do. The "dream" career pretty much rotated on a weekly basis until college. From an early age on, however, I was always pretty imaginative. I enjoyed creating worlds and stories. I'm sure my neighbors were fairly concerned when I ran around the backyard, tossing a football to myself, imagining an entire Hall of Fame career in the course of a half-hour. I have plenty of memories of epic lightsaber battles around the school, or begging my mom to buy me a new pack of Yu-Gi-Oh cards (remember when McDonald's used to give them as Happy Meal Toys? The past was truly better).<br>
@@ -87,6 +117,8 @@
 
 
 		<script src="public/javascript/modal.js"></script>
+		<script src="public/javascript/animateRocket.js"></script>
+
 
 </body>
 
