--- a/index.html
+++ b/index.html
@@ -3,70 +3,73 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="public/scss/style.css">
-
 </head>
-
-
 <body>
 
-		<div class="title"><p>my name is evan.<br>i make stuff.</p></div>
+		<div class="title"><p>hi, i'm evan.<br>i make things.</p></div>
 
 		<div class="buttons">
 			<button id="modalBtn1" class="button1">blog</button>
-			<button id="modalBtn2" class="button2">portfolio</button>
+			<button id="modalBtn2" class="button2">resume</button>
 			<button id="modalBtn3" class="button3">about</button>
 			<button id="modalBtn4" class="button4">contact</button>
 		</div>
+
+		<!--<div id="mydiv"><div id="mydivheader"><img src="images/ACTIVEscout1p1.gif"height="200px"></div></div> -->
+
 
 		<!-- Blog Modal -->
 
 		<div id = "modal1" class="modal1" tabindex="-1" role="dialog">
 			<div class="modal-content1">
 				<div class="modal-header1">
-					<h2>Blog Modal</h2>
+					<span class="headerText1">here's a blog</span>
 					<span class="closeBtn1">&times;</span>
 				</div>
 				<div class="modal-body1">
+					<div class="intro"><p>why hello, what is this you may ask? it's a little experiment omine to build a blog from scratch. I can't promise what I'll post here, and I definitely can't promise it will be profound, but here it is! </p></div>
 					<!-- Lookat -->
-					<p>this is where some blog stuff goes..</p>
 
-					<div id="originText">
-						Hello There, <br>
-						<br>
-						I was one of those typical kids who had no idea of what they wanted to do. The "dream" career pretty much rotated on a weekly basis until college. From an early age on, however, I was always pretty imaginative. I enjoyed creating worlds and stories. I'm sure my neighbors were fairly concerned when I ran around the backyard, tossing a football to myself, imagining an entire Hall of Fame career in the course of a half-hour. I have plenty of memories of epic lightsaber battles around the school, or begging my mom to buy me a new pack of Yu-Gi-Oh cards (remember when McDonald's used to give them as Happy Meal Toys? The past was truly better).<br>
-						<br>
-			 			I probably spent way too much time in fantasy-land as a kid, because, in some ways, I feel like I never left. I still love to create worlds and explore the infinite bounty of ridiculousness that exists in my brain. I did, however, realize that while an eight year old kid running around the backyard talking to himself may be innocent and maybe even charming, the same can not be said for a twenty-something year old adult. In order to trick society to allow me to continue my whackiness, I decided to go into Computer Science. While working towards my degree, I discovered that a lot of the fun fantasies that I had envisioned as a kid, I could now re-create using video games as a medium <br>
-			 			<br>
-			 			So what kind of employee would you be getting in hiring me? Well, I can't tell you exactly, but I can promise that you'll be getting someone who is passionate about creating new and exciting worlds and adventures. I constantly strive to improve myself and my abilities, so that I can truly be an asset to the people I work with.<br>
-						<br>
-			            -Evan Zoran<br>
-					</div>
 
-					<div id="originText">
-						Hello There, <br>
-						<br>
-						I was one of those typical kids who had no idea of what they wanted to do. The "dream" career pretty much rotated on a weekly basis until college. From an early age on, however, I was always pretty imaginative. I enjoyed creating worlds and stories. I'm sure my neighbors were fairly concerned when I ran around the backyard, tossing a football to myself, imagining an entire Hall of Fame career in the course of a half-hour. I have plenty of memories of epic lightsaber battles around the school, or begging my mom to buy me a new pack of Yu-Gi-Oh cards (remember when McDonald's used to give them as Happy Meal Toys? The past was truly better).<br>
-						<br>
-			 			I probably spent way too much time in fantasy-land as a kid, because, in some ways, I feel like I never left. I still love to create worlds and explore the infinite bounty of ridiculousness that exists in my brain. I did, however, realize that while an eight year old kid running around the backyard talking to himself may be innocent and maybe even charming, the same can not be said for a twenty-something year old adult. In order to trick society to allow me to continue my whackiness, I decided to go into Computer Science. While working towards my degree, I discovered that a lot of the fun fantasies that I had envisioned as a kid, I could now re-create using video games as a medium <br>
-			 			<br>
-			 			So what kind of employee would you be getting in hiring me? Well, I can't tell you exactly, but I can promise that you'll be getting someone who is passionate about creating new and exciting worlds and adventures. I constantly strive to improve myself and my abilities, so that I can truly be an asset to the people I work with.<br>
-						<br>
-			            -Evan Zoran<br>
-					</div>
 				</div>
 			</div>
 		</div>
 
-		<!-- Portfolio Modal -->
+		<!-- Resume Modal -->
 
 		<div id = "modal2" class="modal2" tabindex="-1" role="dialog">
 			<div class="modal-content2">
 				<div class="modal-header2">
-					<h2>Potfolio Modal</h2>
+					<span class="headerText2">here's my resume</span>
 					<span class="closeBtn2">&times;</span>
 				</div>
 				<div class="modal-body2">
-					<p>this is where some portfolio stuff goes..</p>
+					<div class="resume-coding">
+						<div class="resume-coding-header">coding</div>
+						<div class="resume-coding-body">
+							HTML/CSS<br>
+							Javascript<br>
+							C#<br>
+							C++/C<br>
+							Java<br>
+							Python<br>
+							Ruby on Rails
+						</div>
+					</div>
+					<div class="resume-projects">
+						<div class="resume-coding-header">projects</div>
+						<div class="resume-projects-body">
+							The Lonely Witch<br>
+							Project Space<br>
+						</div>
+					</div>
+					<div class="resume-art">
+						<div class="resume-art-header">projects</div>
+						<div class="resume-art-body">
+							<div id="img"><img src="images/ACTIVEscout1p1.gif"></div>
+						</div>
+					</div>
+
 				</div>
 			</div>
 		</div>
@@ -76,13 +79,12 @@
 		<div id = "modal3" class="modal3" tabindex="-1" role="dialog">
 			<div class="modal-content3">
 				<div class="modal-header3">
+					<span class="headerText3">hello there,</span>
 					<span class="closeBtn3">&times;</span>
-
 				</div>
 				<div class="modal-body3">
 					<div id="originText">
 
-						Hello There, <br>
 						<br>
 						I was one of those typical kids who had no idea of what they wanted to do. The "dream" career pretty much rotated on a weekly basis until college. From an early age on, however, I was always pretty imaginative. I enjoyed creating worlds and stories. I'm sure my neighbors were fairly concerned when I ran around the backyard, tossing a football to myself, imagining an entire Hall of Fame career in the course of a half-hour. I have plenty of memories of epic lightsaber battles around the school, or begging my mom to buy me a new pack of Yu-Gi-Oh cards (remember when McDonald's used to give them as Happy Meal Toys? The past was truly better).<br>
 						<br>
@@ -101,12 +103,12 @@
 		<div id = "modal4" class="modal4" tabindex="-1" role="dialog">
 			<div class="modal-content4">
 				<div class="modal-header4">
+					<span class="headerText4">For Professional Inquiries:</span>
 					<span class="closeBtn4">&times;</span>
 				</div>
 				<div class="modal-body4">
 					<div id = "bodyLinks">
 						<ul>
-							<li><a>For Professional Inquiries:</a></li>
 				 			<li><a href="mailto:evanzoran17@gmail.com?Subject=Inquiry">evanzoran17@gmail.com</a></li>
 				 			<li><a title="Test" >(303)-725-0664</a></li>
 						</ul>
@@ -115,9 +117,8 @@
 			</div>
 		</div>
 
-
+		<script src="public/javascript/animate.js"></script>
 		<script src="public/javascript/modal.js"></script>
-		<script src="public/javascript/animateRocket.js"></script>
 
 
 </body>
