added skater image

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <body>
 
 		<div class="title"><p>hi, i'm evan.<br>i make things.</p></div>
-
+		<div class="bg"></div>
+		
 		<div class="buttons">
 			<button id="modalBtn1" class="button1">blog</button>
 			<button id="modalBtn2" class="button2">resume</button>
@@ -15,7 +16,7 @@
 			<button id="modalBtn4" class="button4">contact</button>
 		</div>
 
-		<!--<div id="mydiv"><div id="mydivheader"><img src="images/ACTIVEscout1p1.gif"height="200px"></div></div> -->
+		<div id="mydiv"><div id="mydivheader"><img src="images/skatingTest1.png"height="400px"></div></div>
 
 
 		<!-- Blog Modal -->
