more work on animation

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 		<div class="bg"></div>
 		<div class="buttons">
 			<button id="modalBtn1" class="button1">blog</button>
-			<button id="modalBtn2" class="button2">resume</button>
+			<button id="modalBtn2" class="button2">resume</button><br>
 			<button id="modalBtn3" class="button3">about</button>
 			<button id="modalBtn4" class="button4">contact</button>
 		</div>
 
-		<div id="skater"><img src="images/skatingTest1.png" height="400px"></div>
+		<img src="images/skatingTest1.png" id="skater" height="350px">
 
 		<!-- Blog Modal -->
 
