--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
 <body>
 
 
-
-
-		<div class="title"><p>hi, i'm evan.<br>i make things.</p></div>
+		<img src="images/skatingTest1.png" id="skater" height="350px">
 		<div class="bg"></div>
+
+		<div class="title"><p>hi, i'm evan<br>i make things</p></div>
+
+
 		<div class="buttons">
 			<button id="modalBtn1" class="button1">blog</button>
-			<button id="modalBtn2" class="button2">resume</button><br>
+			<button id="modalBtn2" class="button2">resume</button>
 			<button id="modalBtn3" class="button3">about</button>
 			<button id="modalBtn4" class="button4">contact</button>
 		</div>
 
-		<img src="images/skatingTest1.png" id="skater" height="350px">
 
 		<!-- Blog Modal -->
 
@@ -68,7 +69,6 @@
 					<div class="resume-art">
 						<div class="resume-art-header">projects</div>
 						<div class="resume-art-body">
-							<div id="img"><img src="images/ACTIVEscout1p1.gif"></div>
 						</div>
 					</div>
 
