modified resume modal

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<img src="images/skatingTest1.png" id="skater" height="350px">
 		<div class="bg"></div>
 
-		<div class="title"><p>hi, i'm evan<br>i make things</p></div>
+		<div class="title"><p>hi, i'm evan.<br>i make things.</p></div>
 
 
 		<div class="buttons">
@@ -26,7 +26,7 @@
 		<div id = "modal1" class="modal1" tabindex="-1" role="dialog">
 			<div class="modal-content1">
 				<div class="modal-header1">
-					<span class="headerText1">here's a blog</span>
+					<span class="headerText1">welcome to my world</span>
 					<span class="closeBtn1">&times;</span>
 				</div>
 				<div class="modal-body1">
@@ -43,14 +43,15 @@
 		<div id = "modal2" class="modal2" tabindex="-1" role="dialog">
 			<div class="modal-content2">
 				<div class="modal-header2">
-					<span class="headerText2">here's my resume</span>
+					<span class="headerText2">resume</span>
 					<span class="closeBtn2">&times;</span>
 				</div>
 				<div class="modal-body2">
 					<div class="resume-coding">
 						<div class="resume-coding-header">coding</div>
 						<div class="resume-coding-body">
-							HTML/CSS<br>
+							HTML<br>
+							SASS/CSS<br>
 							Javascript<br>
 							C#<br>
 							C++/C<br>
@@ -59,16 +60,27 @@
 							Ruby on Rails
 						</div>
 					</div>
-					<div class="resume-projects">
-						<div class="resume-coding-header">projects</div>
-						<div class="resume-projects-body">
-							The Lonely Witch<br>
-							Project Space<br>
+					<div class="resume-tools">
+						<div class="resume-tools-header">tools</div>
+						<div class="resume-tools-body">
+							Git<br>
+							Visual Studio<br>
+							Eclipse<br>
+							Pycharm<br>
+							Atom<br>
+							Photoshop<br>
+							Blender<br>
+							Unreal Engine<br>
+							Unity Engine<br>
 						</div>
 					</div>
-					<div class="resume-art">
-						<div class="resume-art-header">projects</div>
-						<div class="resume-art-body">
+					<div class="resume-projects">
+						<div class="resume-projects-header">projects</div>
+						<div class="resume-projects-body">
+							<p>The Lonely Witch<br></p>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/wF19iU1HZlc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							<p>Project Space<br></p>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/wF19iU1HZlc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 						</div>
 					</div>
 
