modified animation js movement
also modified some format stuff

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <body>
 
 
-		<img src="images/skatingTest1.png" id="skater" height="350px">
+		<div id="skater"><img src="images/skaterAnimation.png" id="skater_inside" height="400px"></div>
+
 		<div class="bg"></div>
 
 		<div class="title"><p>hi, i'm evan.<br>i make things.</p></div>
@@ -43,7 +44,7 @@
 		<div id = "modal2" class="modal2" tabindex="-1" role="dialog">
 			<div class="modal-content2">
 				<div class="modal-header2">
-					<span class="headerText2">resume</span>
+					<span class="headerText2">evan zoran - software developer</span>
 					<span class="closeBtn2">&times;</span>
 				</div>
 				<div class="modal-body2">
@@ -79,11 +80,15 @@
 						<div class="resume-projects-body">
 							<p>The Lonely Witch<br></p>
 							<iframe width="560" height="315" src="https://www.youtube.com/embed/wF19iU1HZlc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							<div class="game-text"><p>Journey into the psyche of a Young Witch named Virgil who lives at a time when her
+								 kind are rejects and persecuted by society. Traverse an open world and
+								 collect "Diary Pages", which serve to provide insight into Virgil's memories.</p></div>
 							<p>Project Space<br></p>
-							<iframe width="560" height="315" src="https://www.youtube.com/embed/wF19iU1HZlc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-						</div>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/UzFbIpTCt98" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							<div class="game-text"><p>Vie for control of a rare element located on Mars in this 2D couch
+								co-op strategy/action game.</p></div>
+							</div>
 					</div>
-
 				</div>
 			</div>
 		</div>
