fixed embedded video aspect ratio

--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
 						<div class="resume-projects-header">projects</div>
 						<div class="resume-projects-body">
 							<p>The Lonely Witch<br></p>
-							<iframe width="560" height="315" src="https://www.youtube.com/embed/wF19iU1HZlc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							<div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/wF19iU1HZlc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
 							<div class="game-text"><p>Journey into the psyche of a Young Witch named Virgil who lives at a time when her
 								 kind are rejects and persecuted by society. Traverse an open world and
 								 collect "Diary Pages", which serve to provide insight into Virgil's memories.</p></div>
 							<p>Project Space<br></p>
-							<iframe width="560" height="315" src="https://www.youtube.com/embed/UzFbIpTCt98" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+							<div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/UzFbIpTCt98" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
 							<div class="game-text"><p>Vie for control of a rare element located on Mars in this 2D couch
 								co-op strategy/action game.</p></div>
 							</div>
