added font size variables to all files

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<div id = "modal2" class="modal2" tabindex="-1" role="dialog">
 			<div class="modal-content2">
 				<div class="modal-header2">
-					<span class="headerText2">evan zoran - software developer</span>
+					<span class="headerText2"></span>
 					<span class="closeBtn2">&times;</span>
 				</div>
 				<div class="modal-body2">
