testing image copy

--- a/index.html
+++ b/index.html
@@ -28,8 +28,17 @@
 <span class="closeBtn1">&times;</span>
 </div>
 <div class="modal-body1">
-<div class="intro"><p>Why hello, what is this you may ask? it's a little experiment of mine to build a blog from scratch. I can't promise what I'll post here, and I definitely can't promise it will be profound, but here it is! </p></div>
+<div class="intro"><p>Why hello, what is this you may ask? it's a little experiment of mine to build a blog from scratch. You can view the source code <a href="https://github.com/ezoran/DynamicBlog">here<a/>. I can't promise what I'll post here, and I definitely can't promise it will be profound, but here it is! </p></div>
 <!-- Lookat -->
+<div class="blog_post">
+<div class="blog_title">HmMMMMMMM
+<div class="blog_entry">ffdsfdsfdsfdssd
+
+<div class="blog_image"><img src=C:\Users\Evan\Documents\Github\ezoran.github.io\images\scan0023.jpg>
+</div>
+</div>
+</div>
+</div>
 <div class="blog_post">
 <div class="blog_title">Third post
 <div class="blog_entry">daslkdjajklcvasjnvkldnv lkvsdvsdvsdvdsvsdvsdv
