fixed image copy bug

--- a/index.html
+++ b/index.html
@@ -28,35 +28,18 @@
 <span class="closeBtn1">&times;</span>
 </div>
 <div class="modal-body1">
-<div class="intro"><p>Why hello, what is this you may ask? it's a little experiment of mine to build a blog from scratch. You can view the source code <a href="https://github.com/ezoran/DynamicBlog">here<a/>. I can't promise what I'll post here, and I definitely can't promise it will be profound, but here it is! </p></div>
+<div class="intro"><p>Why hello, what is this you may ask? It's a little experiment of mine to build a blog from scratch. You can view the source code <a href="https://github.com/ezoran/DynamicBlog">here<a/>. I can't promise what I'll post here, and I definitely can't promise it will be profound, but here it is! </p></div>
 <!-- Lookat -->
 <div class="blog_post">
-<div class="blog_title">HmMMMMMMM
-<div class="blog_entry">ffdsfdsfdsfdssd
+<div class="blog_title">Second post
+<div class="blog_entry">dsadasdsasadasdasdasasdasdsadasdasdsadsadasdsadas
 
-<div class="blog_image"><img src=C:\Users\Evan\Documents\Github\ezoran.github.io\images\scan0023.jpg>
+<div class="blog_image"><img src=images\code.PNG>
 </div>
 </div>
 </div>
 </div>
-<div class="blog_post">
-<div class="blog_title">Third post
-<div class="blog_entry">daslkdjajklcvasjnvkldnv lkvsdvsdvsdvdsvsdvsdv
 
-<div class="blog_image"><img src=C:\Users\Evan\Documents\Github\ezoran.github.io\images\lonelywitch1.PNG>
-</div>
-</div>
-</div>
-</div>
-<div class="blog_post">
-<div class="blog_title">My second post
-<div class="blog_entry">This is a test for my second post
-
-<div class="blog_image"><img src=C:\Users\Evan\Documents\Github\ezoran.github.io\images\coverImage.png>
-</div>
-</div>
-</div>
-</div>
 <div class="blog_post">
 <div class="blog_title">This is my first post
 <div class="blog_entry">It sportsman earnestly ye preserved an on. Moment led family sooner cannot her window pulled any. Or raillery if improved landlord to speaking hastened differed he. Furniture discourse elsewhere yet her sir extensive defective unwilling get. Why resolution one motionless you him thoroughly. Noise is round to in it quick timed doors. Written address greatly get attacks inhabit pursuit our but. Lasted hunted enough an up seeing in lively letter. Had judgment out opinions property the supplied.
@@ -68,7 +51,7 @@ Real sold my in call. Invitation on an advantages collecting. But event old abov
 Resources exquisite set arranging moonlight sex him household had. Months had too ham cousin remove far spirit. She procuring the why performed continual improving. Civil songs so large shade in cause. Lady an mr here must neat sold. Children greatest ye extended delicate of. No elderly passage earnest as in removed winding or.
 
 
-<div class="blog_image"><img src=C:\Users\Evan\Documents\Github\ezoran.github.io\images\virgil.PNG>
+<div class="blog_image"><img src=images\virgil.PNG>
 </div>
 </div>
 </div>
