work on resume modal

--- a/index.html
+++ b/index.html
@@ -1,175 +1,153 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="public/scss/style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="public/scss/style.css">
 </head>
 <body>
 
 
-<div id="skater"><img src="images/skaterAnimation.gif" id="skater_inside" height="400px"></div>
+  <div id="skater"><img src="images/skaterAnimation.gif" id="skater_inside" height="400px"></div>
 
-<div class="title"><p>hi, i'm evan.<br>i make things.</p></div>
+  <div class="title"><p>hi, i'm evan.<br>i make things.</p></div>
 
-<div class="buttons">
-<button id="modalBtn1" class="button1">blog</button>
-<button id="modalBtn2" class="button2">resume</button>
-<button id="modalBtn3" class="button3">about</button>
-<button id="modalBtn4" class="button4">contact</button>
-</div>
-
-
-<!-- Blog Modal -->
-
-<div id = "modal1" class="modal1" tabindex="-1" role="dialog">
-<div class="modal-content1">
-<div class="modal-header1">
-<span class="headerText1">welcome to my world</span>
-<span class="closeBtn1">&times;</span>
-</div>
-<div class="modal-body1">
-<div class="intro"><p>Why hello, what is this you may ask? It's a little experiment of mine to build a blog from scratch. You can view the source code <a href="https://github.com/ezoran/DynamicBlog">here<a/>. I can't promise what I'll post here, and I definitely can't promise it will be profound, but here it is! </p></div>
-<!-- Lookat -->
-<div class="blog_post">
-<div class="blog_title">Second post
-<div class="blog_entry">Much evil soon high in hope do view. Out may few northward believing attempted. Yet timed being songs marry one defer men our. Although finished blessing do of. Consider speaking me prospect whatever if. Ten nearer rather hunted six parish indeed number. Allowance repulsive sex may contained can set suspected abilities cordially. Do part am he high rest that. So fruit to ready it being views match.
-
-Real sold my in call. Invitation on an advantages collecting. But event old above shy bed noisy. Had sister see wooded favour income has. Stuff rapid since do as hence. Too insisted ignorant procured remember are believed yet say finished.
-
-Resources exquisite set arranging moonlight sex him household had. Months had too ham cousin remove far spirit. She procuring the why performed continual improving. Civil songs so large shade in cause. Lady an mr here must neat sold. Children greatest ye extended delicate of. No elderly passage earnest as in removed winding or.
+  <div class="buttons">
+    <button id="modalBtn1" class="button1">blog</button>
+    <button id="modalBtn2" class="button2">resume</button>
+    <button id="modalBtn3" class="button3">about</button>
+    <button id="modalBtn4" class="button4">contact</button>
+  </div>
 
 
+  <!-- Blog Modal -->
 
-<div class="blog_image"><img src=images\code.PNG>
-</div>
-</div>
-</div>
-</div>
+  <div id = "modal1" class="modal1" tabindex="-1" role="dialog">
+    <div class="modal-content1">
+      <div class="modal-header1">
+        <span class="headerText1">welcome to my world</span>
+        <span class="closeBtn1">&times;</span>
+      </div>
+      <div class="modal-body1">
+        <div class="intro"><p>Why hello, what is this you may ask? It's a little experiment of mine to build a blog from scratch. You can view the source code <a href="https://github.com/ezoran/DynamicBlog">here<a/>. I can't promise what I'll post here, and I definitely can't promise it will be profound, but here it is! </p></div>
+          <!-- Lookat -->
 
-<div class="blog_post">
-<div class="blog_title">This is my first post
-<div class="blog_entry">It sportsman earnestly ye preserved an on. Moment led family sooner cannot her window pulled any. Or raillery if improved landlord to speaking hastened differed he. Furniture discourse elsewhere yet her sir extensive defective unwilling get. Why resolution one motionless you him thoroughly. Noise is round to in it quick timed doors. Written address greatly get attacks inhabit pursuit our but. Lasted hunted enough an up seeing in lively letter. Had judgment out opinions property the supplied.
+          <!-- don't delete these bottom 3 </div>-->
+        </div>
+      </div>
+    </div>
 
-Much evil soon high in hope do view. Out may few northward believing attempted. Yet timed being songs marry one defer men our. Although finished blessing do of. Consider speaking me prospect whatever if. Ten nearer rather hunted six parish indeed number. Allowance repulsive sex may contained can set suspected abilities cordially. Do part am he high rest that. So fruit to ready it being views match.
+    <!-- Resume Modal -->
 
-Real sold my in call. Invitation on an advantages collecting. But event old above shy bed noisy. Had sister see wooded favour income has. Stuff rapid since do as hence. Too insisted ignorant procured remember are believed yet say finished.
+    <div id = "modal2" class="modal2" tabindex="-1" role="dialog">
+      <div class="modal-content2">
+        <div class="modal-header2">
+          <span class="headerText2"></span>
+          <span class="closeBtn2">&times;</span>
+        </div>
+        <div class="modal-body2">
+          <div class="info">
+            <a>Evan Zoran<br></a>
+            <br>
+            <a href="FrontEndResume.pdf" target="_blank">Resume PDF<br></a>
+            <a href="https://github.com/ezoran">Github<br></a>
+            <a href="https://soundcloud.com/evanzoran">SoundCloud<br></a>
+            <a href="https://www.linkedin.com/in/evanzoran/">LinkedIn<br></a>
+          </div>
 
-Resources exquisite set arranging moonlight sex him household had. Months had too ham cousin remove far spirit. She procuring the why performed continual improving. Civil songs so large shade in cause. Lady an mr here must neat sold. Children greatest ye extended delicate of. No elderly passage earnest as in removed winding or.
+            <div class="resume-coding">
+              <div class="resume-coding-header">coding</div>
+              <div class="resume-coding-body">
+                HTML<br>
+                SASS/CSS<br>
+                Javascript<br>
+                C#<br>
+                C++/C<br>
+                Java<br>
+                Python<br>
+                Ruby on Rails
+              </div>
+            </div>
 
+            <div class="resume-tools">
+              <div class="resume-tools-header">tools</div>
+              <div class="resume-tools-body">
+                Git<br>
+                Visual Studio<br>
+                Eclipse<br>
+                Pycharm<br>
+                Atom<br>
+                Photoshop<br>
+                Blender<br>
+                Unreal Engine<br>
+                Unity Engine<br>
+              </div>
+            </div>
+            <div class="resume-projects">
+              <div class="resume-projects-header">projects</div>
+              <div class="resume-projects-body">
+                <p>The Lonely Witch<br></p>
+                <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/wF19iU1HZlc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
+                <div class="game-text"><p>Journey into the psyche of a Young Witch named Virgil who lives at a time when her
+                  kind are rejects and persecuted by society. Traverse an open world and
+                  collect "Diary Pages", which serve to provide insight into Virgil's memories.</p></div>
+                  <p>Project Space<br></p>
+                  <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/UzFbIpTCt98" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
+                  <div class="game-text"><p>Vie for control of a rare element located on Mars in this 2D couch
+                    co-op strategy/action game.</p></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
 
-<div class="blog_image"><img src=images\virgil.PNG>
-</div>
-</div>
-</div>
-</div>
+          <!-- About Modal -->
 
-<!-- don't delete these bottom 3 </div>-->
-</div>
-</div>
-</div>
+          <div id = "modal3" class="modal3" tabindex="-1" role="dialog">
+            <div class="modal-content3">
+              <div class="modal-header3">
+                <span class="headerText3">hello there,</span>
+                <span class="closeBtn3">&times;</span>
+              </div>
+              <div class="modal-body3">
+                <div id="originText">
 
-<!-- Resume Modal -->
+                  <br>
+                  I was one of those typical kids who had no idea of what they wanted to do. The "dream" career pretty much rotated on a weekly basis until college. From an early age on, however, I was always pretty imaginative. I enjoyed creating worlds and stories. I'm sure my neighbors were fairly concerned when I ran around the backyard, tossing a football to myself, imagining an entire Hall of Fame career in the course of a half-hour. I have plenty of memories of epic lightsaber battles around the school, or begging my mom to buy me a new pack of Yu-Gi-Oh cards (remember when McDonald's used to give them as Happy Meal Toys? The past was truly better).<br>
+                  <br>
+                  I probably spent way too much time in fantasy-land as a kid, because, in some ways, I feel like I never left. I still love to create worlds and explore the infinite bounty of ridiculousness that exists in my brain. I did, however, realize that while an eight year old kid running around the backyard talking to himself may be innocent and maybe even charming, the same can not be said for a twenty-something year old adult. In order to trick society to allow me to continue my whackiness, I decided to go into Computer Science. While working towards my degree, I discovered that a lot of the fun fantasies that I had envisioned as a kid, I could now re-create using video games as a medium <br>
+                  <br>
+                  So what kind of employee would you be getting in hiring me? Well, I can't tell you exactly, but I can promise that you'll be getting someone who is passionate about creating new and exciting worlds and adventures. I constantly strive to improve myself and my abilities, so that I can truly be an asset to the people I work with.<br>
+                  <br>
+                  -Evan Zoran<br>
+                </div>
+              </div>
+            </div>
+          </div>
 
-<div id = "modal2" class="modal2" tabindex="-1" role="dialog">
-<div class="modal-content2">
-<div class="modal-header2">
-<span class="headerText2"></span>
-<span class="closeBtn2">&times;</span>
-</div>
-<div class="modal-body2">
-<div class="resume-coding">
-<div class="resume-coding-header">coding</div>
-<div class="resume-coding-body">
-HTML<br>
-SASS/CSS<br>
-Javascript<br>
-C#<br>
-C++/C<br>
-Java<br>
-Python<br>
-Ruby on Rails
-</div>
-</div>
-<div class="resume-tools">
-<div class="resume-tools-header">tools</div>
-<div class="resume-tools-body">
-Git<br>
-Visual Studio<br>
-Eclipse<br>
-Pycharm<br>
-Atom<br>
-Photoshop<br>
-Blender<br>
-Unreal Engine<br>
-Unity Engine<br>
-</div>
-</div>
-<div class="resume-projects">
-<div class="resume-projects-header">projects</div>
-<div class="resume-projects-body">
-<p>The Lonely Witch<br></p>
-<div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/wF19iU1HZlc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
-<div class="game-text"><p>Journey into the psyche of a Young Witch named Virgil who lives at a time when her
-kind are rejects and persecuted by society. Traverse an open world and
-collect "Diary Pages", which serve to provide insight into Virgil's memories.</p></div>
-<p>Project Space<br></p>
-<div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/UzFbIpTCt98" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
-<div class="game-text"><p>Vie for control of a rare element located on Mars in this 2D couch
-co-op strategy/action game.</p></div>
-</div>
-</div>
-</div>
-</div>
-</div>
+          <!-- ContactModal -->
 
-<!-- About Modal -->
+          <div id = "modal4" class="modal4" tabindex="-1" role="dialog">
+            <div class="modal-content4">
+              <div class="modal-header4">
+                <span class="headerText4">For Professional Inquiries:</span>
+                <span class="closeBtn4">&times;</span>
+              </div>
+              <div class="modal-body4">
+                <div id = "bodyLinks">
+                  <ul>
+                    <li><a href="mailto:evanzoran17@gmail.com?Subject=Inquiry">evanzoran17@gmail.com</a></li>
+                    <li><a title="Test" >(303)-725-0664</a></li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
 
-<div id = "modal3" class="modal3" tabindex="-1" role="dialog">
-<div class="modal-content3">
-<div class="modal-header3">
-<span class="headerText3">hello there,</span>
-<span class="closeBtn3">&times;</span>
-</div>
-<div class="modal-body3">
-<div id="originText">
-
-<br>
-I was one of those typical kids who had no idea of what they wanted to do. The "dream" career pretty much rotated on a weekly basis until college. From an early age on, however, I was always pretty imaginative. I enjoyed creating worlds and stories. I'm sure my neighbors were fairly concerned when I ran around the backyard, tossing a football to myself, imagining an entire Hall of Fame career in the course of a half-hour. I have plenty of memories of epic lightsaber battles around the school, or begging my mom to buy me a new pack of Yu-Gi-Oh cards (remember when McDonald's used to give them as Happy Meal Toys? The past was truly better).<br>
-<br>
-I probably spent way too much time in fantasy-land as a kid, because, in some ways, I feel like I never left. I still love to create worlds and explore the infinite bounty of ridiculousness that exists in my brain. I did, however, realize that while an eight year old kid running around the backyard talking to himself may be innocent and maybe even charming, the same can not be said for a twenty-something year old adult. In order to trick society to allow me to continue my whackiness, I decided to go into Computer Science. While working towards my degree, I discovered that a lot of the fun fantasies that I had envisioned as a kid, I could now re-create using video games as a medium <br>
-<br>
-So what kind of employee would you be getting in hiring me? Well, I can't tell you exactly, but I can promise that you'll be getting someone who is passionate about creating new and exciting worlds and adventures. I constantly strive to improve myself and my abilities, so that I can truly be an asset to the people I work with.<br>
-<br>
--Evan Zoran<br>
-</div>
-</div>
-</div>
-</div>
-
-<!-- ContactModal -->
-
-<div id = "modal4" class="modal4" tabindex="-1" role="dialog">
-<div class="modal-content4">
-<div class="modal-header4">
-<span class="headerText4">For Professional Inquiries:</span>
-<span class="closeBtn4">&times;</span>
-</div>
-<div class="modal-body4">
-<div id = "bodyLinks">
-<ul>
-<li><a href="mailto:evanzoran17@gmail.com?Subject=Inquiry">evanzoran17@gmail.com</a></li>
-<li><a title="Test" >(303)-725-0664</a></li>
-</ul>
-</div>
-</div>
-</div>
-</div>
-
-<script src="public/javascript/animate.js"></script>
-<script src="public/javascript/modal.js"></script>
+          <script src="public/javascript/animate.js"></script>
+          <script src="public/javascript/modal.js"></script>
 
 
-</body>
+        </body>
 
 
-</html>
+        </html>
