--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <div class="modal-body2">
           <div class="info">
             <a>Evan Zoran<br></a>
+            <a>Software Developer<br></a>
             <br>
             <a href="FrontEndResume.pdf" target="_blank">Resume PDF<br></a>
             <a href="https://github.com/ezoran">Github<br></a>
