--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
 
 
-  <div id="skater"><img src="images/skaterAnimation.gif" id="skater_inside" height="400px"></div>
+  <div id="skater"><img src="images/skaterAnimation.gif" id="skater_inside" height="400px" style=opacity:1;></div>
 
-  <div class="title"><p>hi, i'm evan.<br>i make things.</p></div>
+  <div class="title"><p>evan zoran<br>coding/design</p></div>
 
   <div class="buttons">
     <button id="modalBtn1" class="button1">blog</button>
@@ -41,7 +41,7 @@
     <div id = "modal2" class="modal2" tabindex="-1" role="dialog">
       <div class="modal-content2">
         <div class="modal-header2">
-          <span class="headerText2"></span>
+          <span class="headerText2">here's my resume</span>
           <span class="closeBtn2">&times;</span>
         </div>
         <div class="modal-body2">
