removed contact ul

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <div id="skater"><img src="images/skaterAnimation.gif" id="skater_inside" height="400px" style=opacity:1;></div>
 
-  <div class="title"><p>evan zoran<br>coding/design</p></div>
+  <div class="title"><p>evan&nbsp;zoran<br>coding/design</p></div>
 
   <div class="buttons">
     <button id="modalBtn1" class="button1">blog</button>
@@ -134,11 +134,9 @@
                 <span class="closeBtn4">&times;</span>
               </div>
               <div class="modal-body4">
-                <div id = "bodyLinks">
-                  <ul>
-                    <li><a href="mailto:evanzoran17@gmail.com?Subject=Inquiry">evanzoran17@gmail.com</a></li>
-                    <li><a title="Test" >(303)-725-0664</a></li>
-                  </ul>
+                <div class = "bodyLinks">
+                  <a href="mailto:evanzoran17@gmail.com?Subject=Inquiry">evanzoran17@gmail.com<br></a></li>
+                  <a>(303)-725-0664</a></li>
                 </div>
               </div>
             </div>
