changed blog text

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <span class="closeBtn1">&times;</span>
       </div>
       <div class="modal-body1">
-        <div class="intro"><p>Why hello, what is this you may ask? It's a little experiment of mine to build a blog from scratch. You can view the source code <a href="https://github.com/ezoran/DynamicBlog">here<a/>. I can't promise what I'll post here, and I definitely can't promise it will be profound, but here it is! </p></div>
+        <div class="intro"><p>Why hello, what is this you may ask? It's a little experiment of mine to build a blog from scratch. You can view the source code <a href="https://github.com/ezoran/DynamicBlog">here<a/>. I'm not exactly sure what I'll post here, and I definitely can't promise it will be profound, but here it is! </p></div>
           <!-- Lookat -->
 
           <!-- don't delete these bottom 3 </div>-->
